# template

./: Cargo.toml  README.md  cargo-generate.toml  clippy.toml  deny.toml  flake.nix  tombi.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/dict/: {{ project-name }}.dict
fuzz/fuzz_targets/: fuzz.rs
scripts/: bench-build.sh  checks.sh  compatibility.sh  coverage.sh  docs.sh  fuzz.sh  setup.sh
src/: lib.rs
tests/: test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
