# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "{{ project-name }}-fuzz"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
{{ project-name }}.workspace = true

# Fuzzing
libfuzzer-sys.workspace = true

[[bin]]
name = "fuzz"
path = "fuzz_targets/fuzz.rs"
test = false
doc = false
bench = false
